# air-boltic

./: .gitignore  README.md  pyproject.toml
analytics/: analytics_report.ipynb
analytics/air_boltic_analytics/: dbt_project.yml
analytics/air_boltic_analytics/models/marts/: dim_aeroplane.sql  dim_customer.sql  dim_trip.sql  fct_order.sql  marts.yml
analytics/air_boltic_analytics/models/sources/: sources.yml  stg_aeroplane_models.sql  stg_aeroplanes.sql  stg_customer_groups.sql  stg_customers.sql  stg_orders.sql  stg_trips.sql
